<resources>
    <string name="app_name">Git Browser</string>
    <string name="forgot_password_message">Too bad! You should never forget you password!</string>
    <string name="wrong_password_message">Wrong username or password. Try again</string>
    <string name="download_failed">Download failed</string>
    <string name="no_repos_message">Could not find any repos</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="really_bad_error_message">Oops! Something went wrong. Please restart the app</string>
    <string name="copied_to_clipboard">Copied to Clipboard!</string>
    <string name="not_available">N/A</string>
    <string name="language">Language:</string>
    <string name="no_of_watchers">No of watchers:</string>
    <string name="ssh_url">ssh URL:</string>
    <string name="https_url">https URL:</string>
    <string name="logout">Logout</string>
    <string name="app_logo">App logo</string>
</resources>
